--- a/new.css
+++ b/new.css
@@ -24,6 +24,14 @@
     background-color:#4d004d;
 }
 
+p.winner{
+	position: 0 auto;
+	font-size:40px;
+	text-align:center;
+	color: blue;
+	
+}
+
 .x-factor-two{
 	width:70px;
     height:70px;
@@ -41,7 +49,6 @@
 	border-radius:10px;
 	color: white;
 	-webkit-border-top-left-radius: 10px;
-	cursor: pointer; cursor: hand;
 }
 
 .box-points{
@@ -51,7 +58,6 @@
 	border-radius:10px;
 	color: white;
 	-webkit-border-top-left-radius: 10px;
-	cursor: pointer; cursor: hand;
 }
 
 .x-win{
